feat: 拆分oms
