# api/gateway/internal/handler/routes.go
@@ -1,5 +1,5 @@
 // Code generated by goctl. DO NOT EDIT.
-// goctl 1.8.4
+// goctl 1.9.2
 
 package handler
 
@@ -12,7 +12,6 @@ import (
 	authmember "github.com/geekeryy/api-hub/api/gateway/internal/handler/auth/member"
 	authoms "github.com/geekeryy/api-hub/api/gateway/internal/handler/auth/oms"
 	healthz "github.com/geekeryy/api-hub/api/gateway/internal/handler/healthz"
-	omsjwks "github.com/geekeryy/api-hub/api/gateway/internal/handler/oms/jwks"
 	useradmin "github.com/geekeryy/api-hub/api/gateway/internal/handler/user/admin"
 	usermember "github.com/geekeryy/api-hub/api/gateway/internal/handler/user/member"
 	"github.com/geekeryy/api-hub/api/gateway/internal/svc"
@@ -142,41 +141,6 @@ func RegisterHandlers(server *rest.Server, serverCtx *svc.ServiceContext) {
 			},
 		},
 		rest.WithPrefix("/api/v1/gateway"),
-	)
-
-	server.AddRoutes(
-		rest.WithMiddlewares(
-			[]rest.Middleware{serverCtx.ContextMiddleware, serverCtx.OmsJwtMiddleware},
-			[]rest.Route{
-				{
-					// 删除公钥
-					Method:  http.MethodDelete,
-					Path:    "/delete",
-					Handler: omsjwks.DeleteKeyHandler(serverCtx),
-				},
-				{
-					// 轮换公钥
-					Method:  http.MethodPut,
-					Path:    "/rotate",
-					Handler: omsjwks.RotateKeyHandler(serverCtx),
-				},
-				{
-					// 公钥使用记录
-					Method:  http.MethodGet,
-					Path:    "/usage",
-					Handler: omsjwks.KeyUsageHandler(serverCtx),
-				},
-			}...,
-		),
-		rest.WithPrefix("/api/v1/gateway/oms/jwks"),
-	)
-
-	server.AddRoutes(
-		rest.WithMiddlewares(
-			[]rest.Middleware{serverCtx.ContextMiddleware, serverCtx.OmsJwtMiddleware},
-			[]rest.Route{}...,
-		),
-		rest.WithPrefix("/api/v1/gateway/oms/rbac"),
 	)
 
 	server.AddRoutes(
