# doc/swagger/gateway.json
@@ -615,133 +615,6 @@
         }
       }
     },
-    "/api/v1/gateway/oms/jwks/delete": {
-      "delete": {
-        "description": "删除公钥",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
-        "tags": [
-          "Oms - jwks"
-        ],
-        "summary": "删除公钥",
-        "operationId": "oms/JwksDeleteKeyHandler",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "required": [
-                "kid"
-              ],
-              "properties": {
-                "kid": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {}
-          }
-        }
-      }
-    },
-    "/api/v1/gateway/oms/jwks/rotate": {
-      "put": {
-        "description": "轮换公钥",
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
-        "tags": [
-          "Oms - jwks"
-        ],
-        "summary": "轮换公钥",
-        "operationId": "oms/JwksRotateKeyHandler",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {}
-          }
-        }
-      }
-    },
-    "/api/v1/gateway/oms/jwks/usage": {
-      "get": {
-        "description": "公钥使用记录",
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
-        "tags": [
-          "Oms - jwks"
-        ],
-        "summary": "公钥使用记录",
-        "operationId": "oms/JwksKeyUsageHandler",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "required": [
-                "kid"
-              ],
-              "properties": {
-                "kid": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "records": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "required": [
-                      "time",
-                      "count"
-                    ],
-                    "properties": {
-                      "count": {
-                        "type": "integer"
-                      },
-                      "time": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/v1/gateway/ping": {
       "get": {
         "produces": [
@@ -1156,9 +1029,9 @@
       }
     }
   },
-  "x-date": "2025-08-26 17:23:48",
+  "x-date": "2025-10-27 18:01:01",
   "x-description": "This is a goctl generated swagger file.",
   "x-github": "https://github.com/zeromicro/go-zero",
   "x-go-zero-doc": "https://go-zero.dev/",
-  "x-goctl-version": "1.8.4"
+  "x-goctl-version": "1.9.2"
 }
